--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,8 @@ psycopg2-binary==2.9.10
 pydantic==2.9.2
 pydantic-settings==2.5.2
 python-dotenv==1.0.1
-openai==1.51.0
+openai>=1.12.0
+httpx>=0.27.0
 requests==2.32.3
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
